--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,6 @@ ol li {
 }
 
 html {
-  background: url(/img/backgroundimg2.jpg) no-repeat center center fixed;
   background-size: cover;
   background-color: #E6E0E0;
   height: 100%;
@@ -375,6 +374,24 @@ body {
   max-width: 1800px;
   display: flex;
   flex-direction: column;
+}
+
+#employee-main {
+  display: grid;
+  width: 90%;
+  margin: 1.2em auto;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 1.2em;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  border: 2px solid #d1d1d1;
+}
+
+.avatar {
+  border-radius: 50%;
 }
 
 hr.line {
