--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -18,6 +18,7 @@ $color-red-orange: #fd7856;
 $color-red-orange-lighter: #fd9f85;
 $color-gray: #666666;
 $color-gray-lighter: #757575;
+$color-gray-lightest: #d1d1d1;
 
 $color-white-gray: #E6E0E0;
 $color-blue: #0f65ef;
