--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-    background: url(/img/backgroundimg2.jpg) no-repeat center center fixed;
+    // background: url(/img/backgroundimg2.jpg) no-repeat center center fixed;
     background-size: cover;
     background-color: $color-white-gray;
     height: 100%;
@@ -17,6 +17,32 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+#employee-main {
+    display: grid;
+    width: 90%;
+    margin: 1.2em auto;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-gap: 1.2em;
+}
+
+.card {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    border: 2px solid $color-gray-lightest;
+}
+
+
+.avatar {
+    border-radius: 50%;
+}
+
+// display: grid;
+//   width: 95%;
+//   max-width: 1000px;
+//   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+//   margin: 2em auto;
+//   grid-gap: 15px;
 
 // hr line default
 
