--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -16,11 +16,11 @@ $color-orange: #f47f16;
 $color-orange-lighter: #f7ad19;
 $color-red-orange: #fd7856;
 $color-red-orange-lighter: #fd9f85;
-$color-gray: #666666;
-$color-gray-lighter: #757575;
-$color-gray-lightest: #d1d1d1;
+$color-gray: #757575;
+$color-gray-lighter: #d6d6d6;
+$color-gray-lightest:#f5f5f5;
 
-$color-white-gray: #E6E0E0;
+$color-white-gray: #f8f5f5;
 $color-blue: #0f65ef;
 $color-skyblue: #b7d7e8;
 $color-green: #68af15;
