--- a/css/styles.css
+++ b/css/styles.css
@@ -363,7 +363,7 @@ ol li {
 
 html {
   background-size: cover;
-  background-color: #E6E0E0;
+  background-color: #fff;
   height: 100%;
 }
 
@@ -376,12 +376,17 @@ body {
   flex-direction: column;
 }
 
+h2 {
+  margin: 1.4em 1.4em 1.4em 1.8em;
+  font-size: 1.2em;
+}
+
 #employee-main {
   display: grid;
-  width: 95%;
+  width: 85%;
   margin: 1.2em auto;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-  grid-template-rows: minmax(180px, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: minmax(180px, 1fr);
   grid-gap: 1.2em;
 }
 
@@ -390,7 +395,11 @@ body {
   grid-template-columns: 150px 1fr;
   align-items: center;
   justify-items: center;
-  border: 2px solid #d1d1d1;
+  border: 2px solid #d6d6d6;
+  border-radius: 10px;
+}
+.card:hover {
+  background-color: #f5f5f5;
 }
 
 .avatar {
@@ -398,8 +407,43 @@ body {
   text-align: center;
 }
 
+.modalOverlay {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  background-color: #fff;
+  text-align: center;
+  border: 2px solid #d6d6d6;
+  border-radius: 10px;
+  color: #757575;
+}
+.modal-card .close {
+  cursor: pointer;
+}
+.modal-card h3 {
+  color: #222222;
+}
+.modal-card p:first-child {
+  text-align: right;
+  margin-right: 1.2em;
+}
+.modal-card img {
+  border-radius: 50%;
+}
+
 hr.line {
-  margin-bottom: 50px;
+  margin: 25px 0;
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
@@ -410,7 +454,7 @@ hr.line {
 /* ============================================= */
 @media (min-width: 1024px) {
   body {
-    font-size: 1.2rem;
+    font-size: 1.1em;
   }
 }
 
