--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,34 +1,47 @@
-body {
-    @include mq(lg) {
+@include mq(lg) {
+    body {
         font-size: 1.1em;
     }
 }
 
 /* ============================================= */
-/*                   Header                      */
+/*                grid-container                 */
 /* ============================================= */
 
+@include mq(med) {
+    #employee-main {
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+    h2 {
+        margin-left: 3.5em;
+    }
 
-/* ============================================= */
-/*                   About                       */
-/* ============================================= */
-
-
-/* ============================================= */
-/*                   Skills                       */
-/* ============================================= */
-
-
-/* ============================================= */
-/*                  Projects                     */
-/* ============================================= */
-
-
-/* ============================================= */
-/*                  Contact                      */
-/* ============================================= */
-
+    .header {
+        @include flexlayout() {
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+    }
+    .search {
+        width: 30%;
+        margin:auto;
+    }
+}
 
 /* ============================================= */
 /*                  Footer                       */
 /* ============================================= */
+
+@include mq(lg) {
+    #employee-main {
+        width: 90%;
+    }
+    
+    .search {
+        margin-right: 4em;
+    }
+
+    .modal-card {
+        width: 30%;
+    }
+}
