--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,28 +12,41 @@ html {
 body {
     font-family: 'Merriweather', Arial, sans-serif;
     color: $color-black;
-    min-height: 100vh;
+    // min-height: 100vh;
     max-width: 1800px;
     display: flex;
     flex-direction: column;
 }
+
 h2 {
     margin: 1.4em 1.4em 1.4em 1.8em;
     font-size: 1.2em;
+}
+
+.header {
+    @include flexlayout() {
+        flex-direction: column;
+    }
+}
+
+.search {
+    width: 50%;
+    margin: 0 2.6em 0 auto;
+    align-items: flex-end;
 }
 
 #employee-main {
     display: grid;
     width: 85%;
     margin: 1.2em auto;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-auto-rows: minmax(180px, 1fr);
     grid-gap: 1.2em;
 }
 // display: grid;
 // width: 95%;
 // margin: 1.2em auto;
-// grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+
 // grid-template-rows: minmax(180px, 1fr);
 // grid-gap: 1.2em;
 
@@ -66,10 +79,11 @@ h2 {
 .modalOverlay {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    display: hidden;
 }
 
 .modal-card {
@@ -77,7 +91,7 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
+    width: 75%;
     background-color: #fff;
     text-align: center;
     border: 2px solid $color-gray-lighter;
@@ -100,14 +114,28 @@ h2 {
     & img {
         border-radius: 50%;
     }
+    
 }
 
+.back,
+.forward {
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+}
 
+.back {
+    left: 0;
+}
 
+.forward {
+    right: 0;
+}
 
-
-
-
+.info {
+    width: 80%;
+    margin: 0 auto;
+}
 
 // hr line default
 
