--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,7 @@ html {
 body {
   font-family: "Merriweather", Arial, sans-serif;
   color: #222222;
+  min-height: 100vh;
   max-width: 1800px;
   display: flex;
   flex-direction: column;
@@ -418,12 +419,13 @@ h2 {
 }
 
 .modalOverlay {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: 1;
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
   display: hidden;
 }
 
@@ -439,9 +441,6 @@ h2 {
   border-radius: 10px;
   color: #757575;
 }
-.modal-card .close {
-  cursor: pointer;
-}
 .modal-card h3 {
   color: #222222;
 }
@@ -449,8 +448,9 @@ h2 {
   text-align: right;
   margin-right: 1.2em;
 }
-.modal-card img {
-  border-radius: 50%;
+
+.close {
+  cursor: pointer;
 }
 
 .back,
