--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -12,10 +12,11 @@ html {
 body {
     font-family: 'Merriweather', Arial, sans-serif;
     color: $color-black;
-    // min-height: 100vh;
+    min-height: 100vh;
     max-width: 1800px;
-    display: flex;
-    flex-direction: column;
+    @include flexlayout() {
+        flex-direction: column;
+    }
 }
 
 h2 {
@@ -43,12 +44,6 @@ h2 {
     grid-auto-rows: minmax(180px, 1fr);
     grid-gap: 1.2em;
 }
-// display: grid;
-// width: 95%;
-// margin: 1.2em auto;
-
-// grid-template-rows: minmax(180px, 1fr);
-// grid-gap: 1.2em;
 
 .card {
     display: grid;
@@ -69,20 +64,15 @@ h2 {
     text-align: center;
 }
 
-// display: grid;
-//   width: 95%;
-//   max-width: 1000px;
-//   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-//   margin: 2em auto;
-//   grid-gap: 15px;
 
 .modalOverlay {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     z-index: 1;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    overflow: auto;
     display: hidden;
 }
 
@@ -98,10 +88,6 @@ h2 {
     border-radius: 10px;
     color: $color-gray;
 
-    & .close {
-        cursor: pointer;
-    }
-
     & h3 {
         color: $color-black;
     }
@@ -110,11 +96,10 @@ h2 {
         text-align: right;
         margin-right: 1.2em;
     }
+}
 
-    & img {
-        border-radius: 50%;
-    }
-    
+.close {
+    cursor: pointer;
 }
 
 .back,
