--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -54,5 +54,6 @@ $github-color: #24292E;
 $breakpoints: (
     'sm': 576px,
     'med': 768px,
-    'lg': 1024px,
+    'lg': 992px,
+    'xlg': 1200px
 );
