--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,9 @@ h2 {
   border: 2px solid #d6d6d6;
   border-radius: 10px;
   color: #757575;
+  display: grid;
+  grid-template-columns: 50px 1fr 50px;
+  grid-auto-rows: minmax(20px 1fr);
 }
 .modal-card h3 {
   color: #222222;
@@ -452,21 +455,27 @@ h2 {
 
 .close {
   cursor: pointer;
+  grid-column: 1/span 3;
+}
+
+.info {
+  grid-column: 2/3;
 }
 
 .back,
 .forward {
-  position: absolute;
-  top: 50%;
   cursor: pointer;
+  align-self: center;
 }
 
 .back {
-  left: 0;
+  grid-column: 1/2;
+  grid-row: 2/3;
 }
 
 .forward {
-  right: 0;
+  grid-column: 3/4;
+  grid-row: 2/3;
 }
 
 .info {
