--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -113,8 +113,10 @@ h2 {
 
 .back,
 .forward {
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    align-self: center;
+    z-index: 100;
 }
 
 .back {
@@ -132,10 +134,8 @@ h2 {
     grid-row: 2 / 3
 }
 
-.info {
-    width: 80%;
-    margin: 0 auto;
-}
+
+
 
 // hr line default
 
